--- a/storeganise/package.json
+++ b/storeganise/package.json
@@ -7,5 +7,8 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/functions-framework": "^3.4.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
