--- a/storeganise/package.json
+++ b/storeganise/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "jest": "^29.7.0"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "test": "node ./node_modules/jest/bin/jest.js ./"
+  }
 }
