--- a/storeganise/package.json
+++ b/storeganise/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/functions-framework": "^3.4.2",
+    "@google-cloud/secret-manager": "^5.6.0",
     "decimal.js": "^10.4.3"
   },
   "devDependencies": {
