--- a/storeganise/package.json
+++ b/storeganise/package.json
@@ -14,6 +14,6 @@
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js ./"
+    "test": "node ./node_modules/jest/bin/jest.js --silent ./"
   }
 }
